# evonyte-distribution

./: .gitignore  DEPLOYMENT_GUIDE.md  DEPLOY_SEQUENCE.md  README.md  deploy_now.ps1  deploy_seed.ps1  deploy_v1028.ps1  insert_version.ps1  redeploy.ps1  version-coach.json  version.json
admin-app/: Cargo.toml  update_checker.rs
docs/: CNAME  QUICK_REFERENCE.md  SETUP_GUIDE.md  coach.html  index.html  version-coach.json
supabase/: schema.sql  storage-setup.md
supabase/functions/download/: index.ts
supabase/functions/health/: index.ts
supabase/functions/latest/: index.ts
supabase/functions/seed/: index.ts
supabase/functions/upload/: index.ts
website/: admin.html  index.html
